<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ProfileActivity"
    android:background="@color/colorWhite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/TransparentText">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorWhite">

                <LinearLayout
                    android:id="@+id/linearLayoutTop"
                    android:background="@drawable/gradientbackground"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:src="@drawable/catnotfound"
                        android:id="@+id/ivProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:civ_border_width="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        app:civ_border_color="@color/colorPrimaryDark"/>

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textSize="18dp"
                        android:text="@string/my_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="140dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tvGithubTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/github"
                                android:textSize="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="bold|italic"/>

                            <TextView
                                android:id="@+id/tvGithub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/github"
                                android:textSize="8dp"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="italic"/>

                        </LinearLayout>

                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tvWebsiteTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/website"
                                android:textSize="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="bold|italic"/>

                            <TextView
                                android:id="@+id/tvWebsite"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/website"
                                android:textSize="8dp"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="italic"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.DetailActivity"
        tools:showIn="@layout/activity_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/tvInformationHeader"
                style="@style/headerText"
                android:text="@string/information"
                android:layout_marginBottom="5dp"/>

            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/ivDescription"
                    android:src="@drawable/cat_description"
                    style="@style/profileDetailsImage" />

                <TextView
                    android:id="@+id/tvNametitle"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorBlack"
                    android:layout_toRightOf="@+id/ivDescription"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvMyName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:layout_toRightOf="@+id/ivDescription"
                    android:layout_below="@+id/tvNametitle"
                    android:text="@string/my_name" />

                <TextView
                    android:id="@+id/tvEmailTitle"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorBlack"
                    android:layout_toRightOf="@+id/ivDescription"
                    android:layout_below="@+id/tvMyName"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:layout_toRightOf="@+id/ivDescription"
                    android:layout_below="@+id/tvEmailTitle"
                    android:text="@string/my_email" />

                <TextView
                    android:id="@+id/tvAboutTitle"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorBlack"
                    android:layout_toRightOf="@+id/ivDescription"
                    android:layout_below="@+id/tvEmail"
                    android:text="@string/about" />

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:layout_toRightOf="@+id/ivDescription"
                    android:layout_below="@+id/tvAboutTitle"
                    android:text="@string/about_detail" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>