<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DetailActivity"
    android:background="@color/colorWhite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/TransparentText">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorWhite">

                <LinearLayout
                    android:id="@+id/linearLayoutTop"
                    android:background="@drawable/gradientbackground"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:src="@drawable/catnotfound"
                        android:id="@+id/ivProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:civ_border_width="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        app:civ_border_color="@color/colorPrimaryDark"/>

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="140dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tvIntelligence"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/intelligence"
                                android:textSize="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="bold|italic"/>

                            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:id="@+id/rbIntelligence"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:scaleX=".4"
                                android:scaleY=".4"
                                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
                                android:isIndicator="true"
                                app:mrb_fillBackgroundStars="true"
                                android:max="5">
                            </me.zhanghai.android.materialratingbar.MaterialRatingBar>

                        </LinearLayout>

                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tvAdaptability"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/adaptability"
                                android:textSize="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="bold|italic"/>

                            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:id="@+id/rbAdaptability"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:scaleX=".4"
                                android:scaleY=".4"
                                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
                                android:isIndicator="true"
                                app:mrb_fillBackgroundStars="true"
                                android:max="5">
                            </me.zhanghai.android.materialratingbar.MaterialRatingBar>

                        </LinearLayout>

                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tvAffectionLevel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/affectionLevel"
                                android:textSize="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="bold|italic"/>

                            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:id="@+id/rbAffectionLevel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:scaleX=".4"
                                android:scaleY=".4"
                                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
                                android:isIndicator="true"
                                app:mrb_fillBackgroundStars="true"
                                android:max="5">
                            </me.zhanghai.android.materialratingbar.MaterialRatingBar>

                        </LinearLayout>

                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tvChildFriendly"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/childFriendly"
                                android:textSize="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="bold|italic"/>

                            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:id="@+id/rbChildFriendly"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:scaleX=".4"
                                android:scaleY=".4"
                                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
                                android:isIndicator="true"
                                app:mrb_fillBackgroundStars="true"
                                android:max="5">
                            </me.zhanghai.android.materialratingbar.MaterialRatingBar>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_detail" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>